2002-02-20  Matthias Clasen  <maclas@gmx.de>

	* docs/tutorial/gtk-tut.sgml: Fold back Svens g_signal fixes from
	the examples.  

	* docs/tutorial/gtk-tut.sgml, examples/progressbar/progressbar.c,
	examples/progressbar/Makefile: Make the progressbar example 
	deprecation-clean.

Tue Feb 19 22:10:59 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_mnemonic_activate): new
	function
	(gtk_tree_view_column_create_button): use g_signal_* instead of
	gtk_signal_*, hook up _mnemonic_activate callback
	(gtk_tree_view_column_update_button): use
	gtk_label_set_text_width_mnemonic instead of gtk_label_set_text
	(#69095)

	* gtk/gtktreeview.c (gtk_tree_view_class_init): remove key bindings
	for C-f and C-b, let treeview search use C-f (instead of C-s)
	(#61866)

	* gtk/gtkrc.key.emacs: add some GtkTreeView bindings

Tue Feb 19 20:56:32 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/theme-bits/decompose-bits.c (do_part): fix bug (skipping all
	black pixels).

2002-02-19  Sven Neumann  <sven@gimp.org>

	* examples/*/*.c: finish conversion to g_signal_* functions by
	using G_OBJECT and G_CALLBACK and other assorted changes.

Tue Feb 19 17:36:31 2002  Kristian Rietveld  <kris@gtk.org>

	* gtktreeprivate.h, gtktreeviewcolumn.[ch], gtktreeview.c: change
	gtk_tree_view_column_cell_render,
	gtk_tree_view_column_cell_focus,
	gtk_tree_view_column_cell_draw_focus and
	gtk_tree_view_column_cell_set_dirty to be private functions.

	* gtktreeviewcolumn.[ch]: add install_handler argument to
	_cell_set_dirty to control if _mark_rows_col_dirty (which calls
	install_presize_handler) gets called, set widths correctly so
	autosizing works (#71870)

	* gtktreeview.c (gtk_tree_view_column_autosize): new function,
	(gtk_tree_view_button_press): make double click on column
	separator resize the row (#71870)
	(gtk_tree_view_get_dest_row_at_pos): change DnD threshold to 33%
	(#71869, suggestion by Anders Carlsson)
